--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienvenidos a ANDESIGN by Pergolini Romina - Bombini Gina</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="/img/icono-andesign.svg">
+    <link rel="icon" href="img/icono-andesign.svg">
 </head>
 
 <body>
@@ -153,7 +153,7 @@
                         </div>
                         <div class="porfolio-fila-cont">
                             <a href="campana-para-iberia.html" target="_blank"><img
-                                    src="/img/galeria/img-peq/publicidad-aerolinea-peq.jpg" alt="publicidad"></a>
+                                    src="img/galeria/img-peq/publicidad-aerolinea-peq.jpg" alt="publicidad"></a>
                             <p>CAMPAÑA PARA IBERIA</p>
                         </div>
                     </div>
