--- a/cristina-dona.html
+++ b/cristina-dona.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienvenidos a ANDESIGN by Pergolini Romina - Bombini Gina</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="/img/icono-andesign.svg">
+    <link rel="icon" href="img/icono-andesign.svg">
 </head>
 <body>
     <img src="img/galeria/img-grandes/cd-cover-cristina-dona.jpg" alt="cd cover cristina dona ">
