--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header id="mainheader">
         <nav class="navbar">
             <div class="contenedornav">
-                <div class="logo"><img src="/img/logo-andesign.svg" width="150" height="150" alt="logo de la empresa">
+                <div class="logo"><img src="img/logo-andesign.svg" width="150" height="150" alt="logo de la empresa">
                 </div>
                 <ul>
                     <li><a href="#mainheader">INICO</a></li>
