--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Bienvenidos a ANDESIGN by Pergolini Romina - Bombini Gina</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="img/icono-andesign.svg">
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
 </head>
 
 <body>
