--- a/index.html
+++ b/index.html
@@ -199,7 +199,6 @@
             <h2>VAMOS A TRABAJAR JUNTOS</h2>
             <p>No dudes en contactarnos para cualquier consulta o presupuesto que necesites.</p>
             <div class="contacto-caja">
-                <h3>ESCRÍBENOS</h3>
                 <form action="enviar-consulta.php" method="post" enctype="multipart/form-data">
                     <div class="campos">
                         <label for="nombres">NOMBRE</label>
@@ -210,7 +209,7 @@
                         <input type="email" name="email" id="e-mail" placeholder="completar e-mail" required>
                     </div>
                     <div class="campos">
-                        <label for="mensaje">CUNSULTA</label>
+                        <label for="mensaje">CONSULTA</label>
                         <textarea name="mensaje" id="consulta-mensaje" cols="30" rows="10" maxlength="750"
                             placeholder="Escribir aquí"></textarea>
                     </div>
