--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <div class="servicios-fila-caja">
                         <figure><img src="img/branding.jpg" alt="diseño de identidad corporativa"></figure>
                         <h3>BRANDING</h3>
-                        <p>Juntos daremos vida <br> a tu marca soñada, teniendo encuenta todos los aspectos para que
+                        <p>Juntos daremos vida a tu marca soñada, teniendo encuenta todos los aspectos para que
                             perdure en el tiempo. </p>
                     </div>
                     <div class="servicios-fila-caja">
@@ -100,7 +100,7 @@
                         </figure>
                         <h3>DISEÑO EDITORIAL</h3>
                         <p>Nos encargamos del diseño, la composición y la maquetación de cualquier producto editorial de
-                            tu marca o empresa.</p>
+                            tu marca.</p>
                     </div>
 
                     <div class="servicios-fila-caja">
@@ -197,8 +197,9 @@
     <section id="contacto">
         <div class="contenedor">
             <h2>VAMOS A TRABAJAR JUNTOS</h2>
-            <p>No dudes en contactarnos para cualquier consulta o presupuesto que necesites.</p>
+            <p>No dudes en contactarmos para cualquier consulta o presupuesto <br> que necesites.</p>
             <div class="contacto-caja">
+                
                 <form action="enviar-consulta.php" method="post" enctype="multipart/form-data">
                     <div class="campos">
                         <label for="nombres">NOMBRE</label>
