--- a/revista-futura.html
+++ b/revista-futura.html
@@ -9,6 +9,7 @@
     <link rel="icon" href="img/icono-andesign.svg">
 </head>
 <body>
-    <img src="img/galeria/img-grandes/diseno-editorial-revista.jpg" alt="imagen grande diseño editorial">
+        <div class="centrar"><img src="img/galeria/img-grandes/diseno-editorial-revista.jpg" alt="imagen grande diseño editorial"></div>
+
 </body>
 </html>
