--- a/fotomontaje-publicitario.html
+++ b/fotomontaje-publicitario.html
@@ -9,6 +9,6 @@
     <link rel="icon" href="img/icono-andesign.svg">
 </head>
 <body>
-    <img src="img/galeria/img-grandes/fotomontaje-sueno.jpg" alt=" fotomontaje publicitario">
+    <div class="centrar"><img src="img/galeria/img-grandes/fotomontaje-sueno.jpg" alt=" fotomontaje publicitario"></div>
 </body>
 </html>
