--- a/fotografia-de-producto.html
+++ b/fotografia-de-producto.html
@@ -9,6 +9,6 @@
     <link rel="icon" href="img/icono-andesign.svg">
 </head>
 <body>
-    <img src="img/galeria/img-grandes/fotografia-producto.jpg" alt=" fotografia de producto">
+    <div class="centrar"><img src="img/galeria/img-grandes/fotografia-producto.jpg" alt=" fotografia de producto"></div>
 </body>
 </html>
