--- a/elle-gourmet.html
+++ b/elle-gourmet.html
@@ -9,6 +9,6 @@
     <link rel="icon" href="img/icono-andesign.svg">
 </head>
 <body>
-    <img src="img/galeria/img-grandes/diseno-editorial-revista-cocina.jpg" alt=" editorial revista de cocina">
+    <div class="centrar"><img src="img/galeria/img-grandes/diseno-editorial-revista-cocina.jpg" alt=" editorial revista de cocina"></div>
 </body>
 </html>
