--- a/cristina-dona.html
+++ b/cristina-dona.html
@@ -9,6 +9,6 @@
     <link rel="icon" href="img/icono-andesign.svg">
 </head>
 <body>
-    <img src="img/galeria/img-grandes/cd-cover-cristina-dona.jpg" alt="cd cover cristina dona ">
+    <div class="centrar"><img src="img/galeria/img-grandes/cd-cover-cristina-dona.jpg" alt="cd cover cristina dona "></div>
 </body>
 </html>
