--- a/campana-para-iberia.html
+++ b/campana-para-iberia.html
@@ -9,6 +9,6 @@
     <link rel="icon" href="img/icono-andesign.svg">
 </head>
 <body>
-    <img src="img/galeria/img-grandes/publicidad-aerolinea.jpg" alt="campaña para iberia">
+    <div class="centrar"><img src="img/galeria/img-grandes/publicidad-aerolinea.jpg" alt="campaña para iberia"></div>
 </body>
 </html>
