--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     <section id="contacto">
         <div class="contenedor">
             <h2>VAMOS A TRABAJAR JUNTOS</h2>
-            <p>No dudes en contactarmos para cualquier consulta o presupuesto <br> que necesites.</p>
+            <p>No dudes en contactarnos para cualquier consulta o presupuesto <br> que necesites.</p>
             <div class="contacto-caja">
                 
                 <form action="enviar-consulta.php" method="post" enctype="multipart/form-data">
